--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
        <div class="nav-row">
           <a href='./index.html' class="logo"><strong>Freelanser</strong> portfolio</a>
-        <ul class="nav-list">
-          <li class="nav-list__item"><a href="#" class="nav-list__link">Projects</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">Skills</a></li>
-          <li class="nav-list__item"><a href="#" class="nav-list__link">Countacts</a></li>
-        </ul>
+          <ul class="nav-list">
+            <li class="nav-list__item"><a href="./index.html" class="nav-list__link nav-list__link--activ">Projects</a></li>
+            <li class="nav-list__item"><a href="./skills.html" class="nav-list__link ">Skills</a></li>
+            <li class="nav-list__item"><a href="./countacts.html" class="nav-list__link">Countacts</a></li>
+          </ul>
        </div>
     </div>
   </nav>
