--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
        </div>
     </div>
   </nav>
+
+  <header class="header">
+    <div class="header__wrapper">
+      <h1 class="header__title">
+        <strong>Hi, my name is <em>Vitaliy</em></strong><br> 
+         a frondend developer
+      </h1>
+      <div class="header__text">
+        <p>with passion for learning and creating.</p>
+      </div>
+      <a href="#!" class="btn">open Github</a>
+    </div>
+  </header>
 </body>
 </html>
