--- a/index.html
+++ b/index.html
@@ -73,8 +73,34 @@
         <h3 class="project__title">Gaming community</h3>
         </a>  
       </li>
+
+
+      <li class="project">
+        <iframe src="http://127.0.0.1:5501/index.html" name="targetframe"
+        allowTransparency="true"
+        scrolling="no"
+        frameborder="0"></iframe>
+        <h3 class="project__title">3d animation</h3>
+      </li>
+
+
     </ul>
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__wrapper">
+        <ul class="social">
+          <li class="social__item"><a href="#!"><img src="./img/icons/vk.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/linkedIn.svg" alt="link"></a></li>
+          <li class="social__item"><a href="#!"><img src="./img/icons/gitHub.svg" alt="link"></a></li>
+        </ul>
+        <div class="copyright">
+          <p>2023</p>
+        </div>
+      </div> 
+    </div>
+  </footer>
 </body>
 </html>
